add auth testing
